tests/baselines/reference/emitArrowFunctionWhenUsingArguments05.errors.txt
emitArrowFunctionWhenUsingArguments05.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments05.ts(2,19): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments05.ts (2 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var a = () => arguments;
                      ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    }